@@ -1,3 +1,12 @@
+2006-11-21  Werner Koch  <wk@g10code.com>
+
+	* scrutmime.c (message_cb): Don't exit for HTML but my name in the
+	To field.
+
+2006-09-25  Werner Koch  <wk@g10code.com>
+
+	* mkdiff: Don't diff po files.
+
 2005-03-15  Werner Koch  <wk@g10code.de>
 
 	* mkdiff: Changed to use bzip2
